--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,65 +24,18 @@ services:
         #seção onde é definida a montagem bind para o volume da aplicação em desenvolvimento
         #Necessário mapear diretório do host que contém a aplicação a ser desenvolvida
         volumes:
-            - /home/guilherme/Documentos/projetos/SaaS/api:/app
+            - /root/agendae-api:/app
         environment:
             - APP_ENV=local
         labels:
             - traefik.enable=true
             - traefik.network=traefik-public
             #definição da porta de entrada do traefik proxy
-            - traefik.http.routers.laravel-rtr.entrypoints=web
-            # - traefik.http.routers.laravel-rtr.entrypoints=websecure
+            - traefik.http.routers.laravel-rtr.entrypoints=websecure
             #definição da rota via traefik proxy
-            - traefik.http.routers.laravel-rtr.rule=Host(`back.localhost`)
-            # - traefik.http.routers.laravel-rtr.tls=true
-            # - traefik.http.routers.laravel-rtr.tls.certresolver=letsencrypt
+            - traefik.http.routers.laravel-rtr.rule=Host(`back.guilhermebraz.tech`)
+            - traefik.http.routers.laravel-rtr.tls=true
+            - traefik.http.routers.laravel-rtr.tls.certresolver=letsencrypt
             #definição do serviço via traefik proxy
             - traefik.http.services.laravel-svc.loadbalancer.server.port=80
             # - traefik.http.routers.laravel-rtr.middlewares=basic-auth@file
-
-    mysql:
-        container_name: mysql-saas
-        image: mysql:5.7
-        ports:
-            - 3306:3306
-        volumes:
-            - './mysql:/var/lib/mysql'
-        networks:
-            - traefik-public
-        #      - interna
-        environment:
-            ALLOW_EMPTY_PASSWORD: "no"
-            MYSQL_ROOT_PASSWORD: saas
-            MYSQL_DATABASE: saas
-            MYSQL_USER: saas
-            MYSQL_PASSWORD: saas
-
-    ############ phpmyadmim ############
-    phpmyadmin:
-        container_name: phpmyadmin-saas
-        image: phpmyadmin/phpmyadmin
-        environment:
-            - MYSQL_ROOT_PASSWORD=saas
-            - PMA_HOST=mysql
-            - TZ=America/Maceio
-        ports:
-            - '9090:80'
-        depends_on:
-            - mysql
-        networks:
-            - traefik-public
-        #     - interna
-        restart: unless-stopped
-        labels:
-            - traefik.enable=true
-            - traefik.docker.network=traefik-public
-            ## HTTP Routers
-            - traefik.http.routers.phpmyadmin-rtr.entrypoints=web
-            # - traefik.http.routers.phpmyadmin-rtr.entrypoints=websecure
-            - traefik.http.routers.phpmyadmin-rtr.rule=Host(`phpmyadmin.localhost`)
-            # - traefik.http.routers.phpmyadmin-rtr.tls=true
-            # - traefik.http.routers.phpmyadmin-rtr.tls.certresolver=letsencrypt
-            ## HTTP Services
-            - traefik.http.services.phpmyadmin-svc.loadbalancer.server.port=80
-            # - traefik.http.routers.phpmyadmim-rtr.middlewares=basic-auth@file
