--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,19 +24,19 @@ services:
         #seção onde é definida a montagem bind para o volume da aplicação em desenvolvimento
         #Necessário mapear diretório do host que contém a aplicação a ser desenvolvida
         volumes:
-            - ${DIR}:/app
+            - /home/guilherme/Documentos/projetos/SaaS/api:/app
         environment:
             - APP_ENV=local
         labels:
             - traefik.enable=true
             - traefik.network=traefik-public
             #definição da porta de entrada do traefik proxy
-            - traefik.http.routers.laravel-rtr.entrypoints=websecure
-            - traefik.http.routers.laravel-rtr.tls=true
-            - traefik.http.routers.laravel-rtr.tls.certresolver=letsencrypt
-            - traefik.http.services.laravel-svc.loadbalancer.server.port=80
+            - traefik.http.routers.laravel-rtr.entrypoints=web
+            # - traefik.http.routers.laravel-rtr.tls=true
+            # - traefik.http.routers.laravel-rtr.tls.certresolver=letsencrypt
+            # - traefik.http.services.laravel-svc.loadbalancer.server.port=80
 
             # - traefik.http.routers.laravel-rtr.entrypoints=web
             # - traefik.http.services.laravel-svc.loadbalancer.server.port=80
 
-            - traefik.http.routers.laravel-rtr.rule=Host(`${APP}`)
+            - traefik.http.routers.laravel-rtr.rule=Host(`back.localhost`)
