--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,95 +22,95 @@ services:
             - traefik.network=traefik-public
             - traefik.http.routers.laravel-rtr.entrypoints=web
             - traefik.http.routers.laravel-rtr.rule=Host(`back.localhost`)
-    mysql:
-        container_name: mysql-saas
-        image: mysql:5.7
-        ports:
-            - 3306:3306
-        volumes:
-            - './mysql:/var/lib/mysql'
-        networks:
-            - traefik-public
-        environment:
-            ALLOW_EMPTY_PASSWORD: "no"
-            MYSQL_ROOT_PASSWORD: saas
-            MYSQL_DATABASE: saas
-            MYSQL_USER: saas
-            MYSQL_PASSWORD: saas
+    # mysql:
+    #     container_name: mysql-saas
+    #     image: mysql:5.7
+    #     ports:
+    #         - 3306:3306
+    #     volumes:
+    #         - './mysql:/var/lib/mysql'
+    #     networks:
+    #         - traefik-public
+    #     environment:
+    #         ALLOW_EMPTY_PASSWORD: "no"
+    #         MYSQL_ROOT_PASSWORD: saas
+    #         MYSQL_DATABASE: saas
+    #         MYSQL_USER: saas
+    #         MYSQL_PASSWORD: saas
 
-    phpmyadmin:
-        container_name: phpmyadmin
-        image: phpmyadmin/phpmyadmin
-        environment:
-            - MYSQL_ROOT_PASSWORD=saas
-            - PMA_HOST=mysql
-            - TZ=America/Maceio
-        ports:
-            - '9090:80'
-        depends_on:
-            - mysql
-        networks:
-            - traefik-public
-        restart: unless-stopped
-        labels:
-            - traefik.enable=true
-            - traefik.docker.network=traefik-public
-            - traefik.http.routers.phpmyadmin-rtr.entrypoints=web
-            - traefik.http.routers.phpmyadmin-rtr.rule=Host(`phpmyadmin.localhost`)
-            - traefik.http.services.phpmyadmin-svc.loadbalancer.server.port=80
+    # phpmyadmin:
+    #     container_name: phpmyadmin
+    #     image: phpmyadmin/phpmyadmin
+    #     environment:
+    #         - MYSQL_ROOT_PASSWORD=saas
+    #         - PMA_HOST=mysql
+    #         - TZ=America/Maceio
+    #     ports:
+    #         - '9090:80'
+    #     depends_on:
+    #         - mysql
+    #     networks:
+    #         - traefik-public
+    #     restart: unless-stopped
+    #     labels:
+    #         - traefik.enable=true
+    #         - traefik.docker.network=traefik-public
+    #         - traefik.http.routers.phpmyadmin-rtr.entrypoints=web
+    #         - traefik.http.routers.phpmyadmin-rtr.rule=Host(`phpmyadmin.localhost`)
+    #         - traefik.http.services.phpmyadmin-svc.loadbalancer.server.port=80
 
-    portainer:
-        container_name: portainer
-        image: portainer/portainer-ce:latest
-        restart: unless-stopped
-        command: -H unix:///var/run/docker.sock
-        networks:
-            - traefik-public
-        security_opt:
-            - no-new-privileges:true
-        ports:
-            - 8000:8000
-            - 9000:9000
-        volumes:
-            - /var/run/docker.sock:/var/run/docker.sock:ro
-            - ./portainer-data:/data
-        environment:
-            - TZ=America/Maceio
-        labels:
-            - traefik.enable=true
-            - traefik.network=traefik-public
-            - traefik.http.routers.portainer-rtr.entrypoints=web #      - traefik.http.routers.portainer-rtr.entrypoints=websecure
-            - traefik.http.routers.portainer-rtr.rule=Host(`portainer.localhost')
-            - traefik.http.services.portainer-svc.loadbalancer.server.port=9000
+    # portainer:
+    #     container_name: portainer
+    #     image: portainer/portainer-ce:latest
+    #     restart: unless-stopped
+    #     command: -H unix:///var/run/docker.sock
+    #     networks:
+    #         - traefik-public
+    #     security_opt:
+    #         - no-new-privileges:true
+    #     ports:
+    #         - 8000:8000
+    #         - 9000:9000
+    #     volumes:
+    #         - /var/run/docker.sock:/var/run/docker.sock:ro
+    #         - ./portainer-data:/data
+    #     environment:
+    #         - TZ=America/Maceio
+    #     labels:
+    #         - traefik.enable=true
+    #         - traefik.network=traefik-public
+    #         - traefik.http.routers.portainer-rtr.entrypoints=web #      - traefik.http.routers.portainer-rtr.entrypoints=websecure
+    #         - traefik.http.routers.portainer-rtr.rule=Host(`portainer.localhost')
+    #         - traefik.http.services.portainer-svc.loadbalancer.server.port=9000
 
-    traefik:
-        container_name: traefik-local
-        image: traefik:latest
-        ports:
-            - 90:90
-            - 443:443
-        labels:
-            - traefik.enable=true
-            - traefik.docker.network=traefik-public
-            - traefik.http.routers.traefik-rtr.entrypoints=web
-            - traefik.http.routers.traefik-rtr.rule=Host(`traefik.localhost`)
-            - traefik.http.services.traefik-svc.loadbalancer.server.port=80
-        volumes:
-            - ./traefik/rules:/rules
-            - /var/run/docker.sock:/var/run/docker.sock:ro
-            - ./traefik/letsencrypt:/letsencrypt
-        command:
-            - --providers.docker
-            - --providers.docker.exposedbydefault=false
-            - --entrypoints.web.address=:80
-            - --entrypoints.websecure.address=:443
-            - --certificatesresolvers.letsencrypt.acme.email=estudoslaravel123@gmail.com
-            - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
-            - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
-            - --providers.file.directory=/rules
-            - --providers.file.watch=true
-            - --accesslog
-            - --log
-            - --api
-        networks:
-            - traefik-public
+    # traefik:
+    #     container_name: traefik-local
+    #     image: traefik:latest
+    #     ports:
+    #         - 90:90
+    #         - 443:443
+    #     labels:
+    #         - traefik.enable=true
+    #         - traefik.docker.network=traefik-public
+    #         - traefik.http.routers.traefik-rtr.entrypoints=web
+    #         - traefik.http.routers.traefik-rtr.rule=Host(`traefik.localhost`)
+    #         - traefik.http.services.traefik-svc.loadbalancer.server.port=80
+    #     volumes:
+    #         - ./traefik/rules:/rules
+    #         - /var/run/docker.sock:/var/run/docker.sock:ro
+    #         - ./traefik/letsencrypt:/letsencrypt
+    #     command:
+    #         - --providers.docker
+    #         - --providers.docker.exposedbydefault=false
+    #         - --entrypoints.web.address=:80
+    #         - --entrypoints.websecure.address=:443
+    #         - --certificatesresolvers.letsencrypt.acme.email=estudoslaravel123@gmail.com
+    #         - --certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json
+    #         - --certificatesresolvers.letsencrypt.acme.tlschallenge=true
+    #         - --providers.file.directory=/rules
+    #         - --providers.file.watch=true
+    #         - --accesslog
+    #         - --log
+    #         - --api
+    #     networks:
+    #         - traefik-public
